Change in color

--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
       font-size:1.4em;
       font-weight: bold;
       text-transform: uppercase;
+      color: #f33;
     }
     div.richtext h5{
       font-size:0.8em;
