--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
     div.richtext h1{
       font-size:2.3em;
       font-weight: bold;
+      color: #f33;
       line-height:1.4em;
       text-transform: uppercase;
     }
