change "div.richtext" to "div.banana"

--- a/index.html
+++ b/index.html
@@ -53,31 +53,31 @@
     	border-spacing: 0;
     }
 
-    div.richtext{
+    div.banana{
       font-family: 'Poppins', 'Arial', 'Helvetica', 'Roboto', sans-serif;
       font-size:max(min(2vw,1.3em),0.8em);
       margin:1em 1em 1.4em 1em;
     }
-    div.richtext h1{
+    div.banana h1{
       font-size:2.3em;
       font-weight: bold;
       color: #f33;
       line-height:1.4em;
       text-transform: uppercase;
     }
-    div.richtext h2{
+    div.banana h2{
       font-size:1.4em;
       font-weight: bold;
       text-transform: uppercase;
       color: #f33;
     }
-    div.richtext h5{
+    div.banana h5{
       font-size:0.8em;
       font-style: italic;
       line-height:1.8em;
       margin:0 0 1.4em 0;
     }
-    div.richtext p{
+    div.banana p{
       font-size:1em;
       line-height:1.8em;
       margin:0 0 1.8em 0
@@ -86,7 +86,7 @@
     </style>
   </head>
   <body>
-    <div class="richtext">
+    <div class="banana">
     <h1>The Phoenix & the Turtle</h1>
     <h5>by William Shakespeare</h5>
     <p>The Phoenix and the Turtle<br>
