rounded corners like a boss!

--- a/index02.html
+++ b/index02.html
@@ -6,7 +6,7 @@
     <style>
       div.rtf{max-width:75ch;
       margin:0 auto;
-      padding:4em;
+      padding:2em;
 
     }
       div.rtf p{line-height:1.5em;}
@@ -30,6 +30,7 @@
         transform:translate(-50%, -50%);
         background:rgba(0, 0, 0, 0.5);
         padding:4vw;
+        border-radius:25px;
 
       }
 
