name changes and other tiny things

--- a/HeroImage.html
+++ b/HeroImage.html
@@ -15,14 +15,14 @@
         object-position:center center;
       }
       div.hero{width:90vw; height:90vw;
-        background-color: #ccc;
+        background-color: azure;
         background-image: url(res/dinosaur.jpg);
         background-size:cover;
         background-position:center center;
         position:relative;
       }
       div.hero h2{
-        color:#fff;
+        color:azure;
         display:block;
         position:absolute;
         top:50%;
