--- a/ImageLayout.html
+++ b/ImageLayout.html
@@ -7,7 +7,7 @@
   <body>
 
     <div class="mygrid">
-      <img src="res/cuteducks.jpg" alt="cute baby duck" class="myimg">
+      <img src="res/cuteducks.jpg" alt="cute teeny weeny duck" class="myimg">
       <div class="rtf">
         <h1>Cute Duck</h1>
 
@@ -20,7 +20,7 @@
           And all of her five little ducks came back
         </p>
       </div>
-      
+
     </div>
     </body>
   </html>
