--- a/index03.html
+++ b/index03.html
@@ -3,34 +3,28 @@
   <head>
     <title>Patty Hilton</title>
     <style>@import url(res/index03.css);
-      div.wrapper{padding:40px;}
-      div.grid{
-        max-width:1200px;
-        margin:0 auto;
-        display:grid;
-        grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));;
-        grid-gap:20px;
 
-      }
-      div.card{background:DarkSeaGreen; min-height:300px;}
     </style>
   </head>
   <body>
-<div.wrapper="wrapper">
   <div class="grid">
-    <div class="card"></div>
-    <div class="card"></div>
-    <div class="card"></div>
-    <div class="card"></div>
-    <div class="card"></div>
-    <div class="card"></div>
-    <div class="card"></div>
-    <div class="card"></div>
-    <div class="card"></div>
+    <div class="card spanningelementcolumn cardtext">card 1</div>
+    <div class="card cardtext">card 2</div>
+    <div class="card cardtext">card 3</div>
+    <div class="card cardtext">card 4</div>
+    <div class="card cardtext">card 5</div>
+    <div class="card cardtext">card 6
+      <div class="salt"><div class="text">salt</div></div>
+    </div>
+    <div class="card cardtext">card 7</div>
+    <div class="card cardtext">card 8</div>
+    <div class="card cardtext">card 9</div>
+    <div class="card cardtext">card 10</div>
+    <div class="card cardtext">card 11</div>
+    <div class="card cardtext">card 12</div>
+    <div class="card cardtext">card 13</div>
 
   </div>
-</div>
-
 
     </body>
 </html>
