--- a/Project1.html
+++ b/Project1.html
@@ -2,33 +2,21 @@
 <html>
   <head>
     <title> Project1 </title>
-    <style>
-      body{background-color: #44C5D5; margin:0; padding:0;}
-      div.mainframe{max-width:1200px; margin:0 auto;}
-
-      div.slide{min-height:100vh;}
-      div.blue{background:#ADD8E6;}
-      div.pink{background:#F08080;}
-      div.yellow{background:#F5DEB3;}
-
-      div.mountainrangeimg{
-        background-repeat:no-repeat;
-        background-position: center center;
-        background-size:cover;
-      }
-
-    </style>
+    <link rel="stylesheet" type="text/css" href="fly/project1.css">
   </head>
-  <body>
+    <body>
 
-  <div class="mainframe">
+      <div class="mainframe">
 
-    <div class="slide mountainrangeimg"
-        style="background-image:url(fly/mountainrange.jpg)">slide one</div>
-    <div class="slide blue">slide blue</div>
-    <div class="slide pink">slide coral pink</div>
-    <div class="slide yellow">slide yellow</div>
-    <div class="slide blue">slide blue</div>
+        <div class="slide topimg" style="background-image:url(fly/mountainrange.jpg)"></div>
+            <div class="topimg-txt">
+              <h1>Chickfly</h1>
+            </div>
+          <div class="slide blue">slide blue</div>
+          <div class="slide pink">slide coral pink</div>
+          <div class="slide yellow">slide yellow</div>
+          <div class="slide blue">slide blue</div>
+      </div>
 
-  </body>
+    </body>
 </html>
