Project1 and Portfolio html with photos

--- a/Project1.html
+++ b/Project1.html
@@ -2,16 +2,25 @@
 <html>
   <head>
     <title> Project1 </title>
-    <link rel="stylesheet" type="text/css" href="fly/project1.css">
+    <style>@import url(fly/project1.css);</style>
   </head>
     <body>
 
       <div class="mainframe">
 
-        <div class="slide topimg" style="background-image:url(fly/mountainrange.jpg)"></div>
-            <div class="topimg-txt">
-              <h1>Chickfly</h1>
-            </div>
+        <div class="slide topimg" style="background-image:url(fly/mountainrange.jpg)">
+          <img class="logoimg" src="fly/LOGO.jpg"/>
+
+          <div class="topimg-txt">
+            <h1>Chickfly Pants</h1>
+            <h2>Freedom to "Go" Anywhere</h2>
+            <div class="button"><a href="">Learn More</a></div>
+          </div>
+
+
+          </div>
+
+
           <div class="slide blue">slide blue</div>
           <div class="slide pink">slide coral pink</div>
           <div class="slide yellow">slide yellow</div>
