placement of content

--- a/Project1.html
+++ b/Project1.html
@@ -4,27 +4,73 @@
     <title> Project1 </title>
     <style>@import url(fly/project1.css);</style>
   </head>
-    <body>
+    <body class="rtf">
 
       <div class="mainframe">
 
-        <div class="slide topimg" style="background-image:url(fly/mountainrange.jpg)">
+        <div class="slide topimg"
+              style="background-image:url(fly/mountainrange.jpg)">
           <img class="logoimg" src="fly/LOGO.jpg"/>
 
           <div class="topimg-txt">
             <h1>Chickfly Pants</h1>
             <h2>Freedom to "Go" Anywhere</h2>
-            <div class="button"><a href="">Learn More</a></div>
+              <div class="button"><a href="">Learn More</a></div>
+          </div>
+
           </div>
 
 
+          <div class="slide secondimg"
+                style="background-image:url(fly/womanscalingmountain.jpg)">
+              <div class="secondslidetxt">
+                <h2>What are Chickfly Pants?</h2>
+                <p>A fly that works for women, no zipper, no fastener.</p>
+                <div class="button2"><a href="">Learn More</a></div>
+              </div>
           </div>
 
+          <div class="slide lightblue">
+              <div class="txtholder">
+                <h2>Privacy, Durability, Flexibility</h2>
+                <img class="explanation" src="fly/explanation.png"/>
+                <p>Our patented fly is held together by tension, creating a
+                  seamless, flattering, soft, and easy-to-use feature
+                  in the most comfortable and stylish basic black pants
+                  that every woman needs.</p>
+                  <div class="button  "><a href="">Pledge!</a></div>
 
-          <div class="slide blue">slide blue</div>
-          <div class="slide pink">slide coral pink</div>
-          <div class="slide yellow">slide yellow</div>
-          <div class="slide blue">slide blue</div>
+              </div>
+          </div>
+
+          <div class="slide white">
+            <div class="txtholder txtholder-white grid2col">
+              <img class="pockets" src="fly/manypockets.jpg"/>
+              <div class="">
+                <h2>Pockets, Pockets, Pockets</h2>
+                <p>Our 4-way stretch fabric is flexible and molds to your body. If
+                  you are between sizes you can choose if you prefer your pants to
+                  be tight enough to provide compression, or just fit your body in a gentle manner.</p>
+                  <div class="button button-blue "><a href="">Pledge!</a></div>
+              </div>
+
+            </div>
+          </div>
+
+          <div class="slide lightblue">
+            <div class="txtholder skinny">
+              <h2>Eco-Friendly</h2>
+              <p>Chickfly pants are made from sustainable bamboo. We chose Canadian
+                company Oratex’s Eco-tech line because they met our high standards.
+                The material is 93% sustainable bamboo with 7% lycra for stretch.
+                This Eco-stretch fabric achieves acme standards of environmental friendliness and quality. </p>
+                <div class="button  "><a href="">Pledge!</a></div>
+            </div>
+          </div>
+          <div class="slide white">White</div>
+          <div class="slide lightblue">LightBlue</div>
+          <div class="slide lightblue">LightBlue</div>
+
       </div>
 
     </body>
