last week update

--- a/Project1.html
+++ b/Project1.html
@@ -13,8 +13,8 @@
           <img class="logoimg" src="fly/LOGO.jpg"/>
 
           <div class="topimg-txt">
-            <h1>Chickfly Pants</h1>
-            <h2>Freedom to "Go" Anywhere</h2>
+            <h1 class="chickflypants">Chickfly Pants</h1>
+            <h2 class="freedomtogo">Freedom to "Go" Anywhere</h2>
               <div class="button"><a href="">Learn More</a></div>
           </div>
 
@@ -24,9 +24,9 @@
           <div class="slide secondimg"
                 style="background-image:url(fly/womanscalingmountain.jpg)">
               <div class="secondslidetxt">
-                <h2>What are Chickfly Pants?</h2>
+                <h2 class="textcenter">What are Chickfly Pants?</h2>
                 <p>A fly that works for women, no zipper, no fastener.</p>
-                <div class="button2"><a href="">Learn More</a></div>
+                <div class="button button2 rtf"><a href="">Learn More</a></div>
               </div>
           </div>
 
@@ -38,7 +38,7 @@
                   seamless, flattering, soft, and easy-to-use feature
                   in the most comfortable and stylish basic black pants
                   that every woman needs.</p>
-                  <div class="button  "><a href="">Pledge!</a></div>
+                  <div class="button"><a href="">Pledge!</a></div>
 
               </div>
           </div>
@@ -50,7 +50,8 @@
                 <h2>Pockets, Pockets, Pockets</h2>
                 <p>Our 4-way stretch fabric is flexible and molds to your body. If
                   you are between sizes you can choose if you prefer your pants to
-                  be tight enough to provide compression, or just fit your body in a gentle manner.</p>
+                  be tight enough to provide compression, or just fit your body
+                  in a gentle manner.</p>
                   <div class="button button-blue "><a href="">Pledge!</a></div>
               </div>
 
@@ -63,13 +64,72 @@
               <p>Chickfly pants are made from sustainable bamboo. We chose Canadian
                 company Oratex’s Eco-tech line because they met our high standards.
                 The material is 93% sustainable bamboo with 7% lycra for stretch.
-                This Eco-stretch fabric achieves acme standards of environmental friendliness and quality. </p>
-                <div class="button  "><a href="">Pledge!</a></div>
+                This Eco-stretch fabric achieves acme standards of environmental
+                friendliness and quality. </p>
+                <div class="button"><a href="">Pledge!</a></div>
             </div>
           </div>
-          <div class="slide white">White</div>
-          <div class="slide lightblue">LightBlue</div>
-          <div class="slide lightblue">LightBlue</div>
+
+          <div class="slide white">
+            <div class="txtholder txtholder-white grid2col">
+              <img class="createdby" src="fly/createdby.jpg">
+              <div class="">
+                <h2>My Story</h2>
+                <p>As a field scientist and general contractor I work with
+                  a lot of men on outdoor projects, and peeing in privacy can be a challenge.
+                  I am a feminist, traveler and environmentalist;<br> I look for solutions
+                  that have synergistic benefits. I work toward ecological solutions
+                  that help promote equality. </p>
+                  <div class="button button-blue "><a href="">Pledge!</a></div>
+                </div>
+              </div>
+          </div>
+
+          <div class="slide lightblue">
+          <h2 class="textcenter">Testimonials</h2>
+            <div class="cardholder">
+                <div class="card leftcard rtf">
+                  <h3 class="testheader">"Solves Problems"</h3>
+                  <img class="testimonalpic" src="fly/testimonalpic1.jpg">
+                  <p class="testparagraph">“These pants quickly became my favorites for their sheer comfort,
+                    ease of use, and gorgeous, flattering style. After years of use,
+                    I'm now shocked at just how many problems they solve. They make so
+                    many things I do easier and safer, from jumping off my motorcycle
+                    to pee on the side of the road without having to remove my gear.”<br>
+                    — K. Shea, Fort Bragg, CA</p>
+                </div>
+
+
+              <div class="card rtf">
+                <h3 class="testheader">"These pants fit through pregnancy"</h3>
+                <img class="testimonalpic" src="fly/testimonalpic2.jpg">
+                <p class="testparagraph">“They were not only the only pants that fit perfectly all through
+                  pregnancy but also the only ones to accommodate the frequent
+                  pregnant pee stops with minimal effort or exposure.”
+                  — K. Shea, Fort Bragg, CA</p>
+
+              </div>
+
+              <div class="card rightcard rtf">
+                <h3 class="testheader">“Get 10 pairs!”</h3>
+                <img class="testimonalpic" src="fly/testimonalpic3.jpg">
+                <p class="testparagraph">“Pretty much everyone as soon as they see how they work -
+                  they go apeshit for them. Seriously, my boyfriend is like
+                  'Get 10 pairs. Why would you take those off?'" — Z. Platek, Ithaca, NY</p>
+              </div>
+
+          </div>
+            <div class="button"><a href="">Learn More</a></div>
+      </div>
+
+
+          <div class="slide lightblue">
+            <img class="whitejacket" src="fly/whitejacket.jpg">
+              <div class="card">
+              <h2>Freedom to "Go" Anywhere</h2>
+              <div class="button"><a href="">Learn More</a></div>
+
+              </div>
 
       </div>
 
