--- a/Project1.html
+++ b/Project1.html
@@ -31,9 +31,9 @@
           </div>
 
           <div class="slide lightblue">
-              <div class="txtholder">
-                <h2>Privacy, Durability, Flexibility</h2>
-                <img class="explanation" src="fly/explanation.png"/>
+              <div class="txtholder textspace">
+                <h2 class="textcenter">Privacy, Durability, Flexibility</h2>
+                <img class="explanation textspace" src="fly/explanation.png"/>
                 <p>Our patented fly is held together by tension, creating a
                   seamless, flattering, soft, and easy-to-use feature
                   in the most comfortable and stylish basic black pants
@@ -45,8 +45,8 @@
 
           <div class="slide white">
             <div class="txtholder txtholder-white grid2col">
-              <img class="pockets" src="fly/manypockets.jpg"/>
-              <div class="">
+              <img class="pockets textspace" src="fly/manypockets.jpg"/>
+              <div class="textspace">
                 <h2>Pockets, Pockets, Pockets</h2>
                 <p>Our 4-way stretch fabric is flexible and molds to your body. If
                   you are between sizes you can choose if you prefer your pants to
@@ -59,7 +59,7 @@
           </div>
 
           <div class="slide lightblue">
-            <div class="txtholder skinny">
+            <div class="txtholder skinny textspace">
               <h2>Eco-Friendly</h2>
               <p>Chickfly pants are made from sustainable bamboo. We chose Canadian
                 company Oratex’s Eco-tech line because they met our high standards.
@@ -72,8 +72,8 @@
 
           <div class="slide white">
             <div class="txtholder txtholder-white grid2col">
-              <img class="createdby" src="fly/createdby.jpg">
-              <div class="">
+              <img class="createdby textspace" src="fly/createdby.jpg">
+              <div class="textspace">
                 <h2>My Story</h2>
                 <p>As a field scientist and general contractor I work with
                   a lot of men on outdoor projects, and peeing in privacy can be a challenge.
