Button Hover and Active-Finished!

--- a/Project1.html
+++ b/Project1.html
@@ -15,7 +15,9 @@
           <div class="topimg-txt">
             <h1 class="chickflypants">Chickfly Pants</h1>
             <h2 class="freedomtogo">Freedom to "Go" Anywhere</h2>
-              <div class="button"><a href="">Learn More</a></div>
+              <div class="button"><a href="">Learn More</a>
+
+              </div>
           </div>
 
           </div>
@@ -33,7 +35,7 @@
           <div class="slide lightblue">
               <div class="txtholder textspace">
                 <h2 class="textcenter">Privacy, Durability, Flexibility</h2>
-                <img class="explanation textspace" src="fly/explanation.png"/>
+                <img class="img-txtholder textspace" src="fly/explanation.png"/>
                 <p>Our patented fly is held together by tension, creating a
                   seamless, flattering, soft, and easy-to-use feature
                   in the most comfortable and stylish basic black pants
@@ -45,7 +47,7 @@
 
           <div class="slide white">
             <div class="txtholder txtholder-white grid2col">
-              <img class="pockets textspace" src="fly/manypockets.jpg"/>
+              <img class="img-txtholder textspace" src="fly/manypockets.jpg"/>
               <div class="textspace">
                 <h2>Pockets, Pockets, Pockets</h2>
                 <p>Our 4-way stretch fabric is flexible and molds to your body. If
@@ -72,12 +74,12 @@
 
           <div class="slide white">
             <div class="txtholder txtholder-white grid2col">
-              <img class="createdby textspace" src="fly/createdby.jpg">
+              <img class="img-txtholder textspace" src="fly/createdby.jpg">
               <div class="textspace">
                 <h2>My Story</h2>
                 <p>As a field scientist and general contractor I work with
                   a lot of men on outdoor projects, and peeing in privacy can be a challenge.
-                  I am a feminist, traveler and environmentalist;<br> I look for solutions
+                  I am a feminist, traveler and environmentalist; I look for solutions
                   that have synergistic benefits. I work toward ecological solutions
                   that help promote equality. </p>
                   <div class="button button-blue "><a href="">Pledge!</a></div>
