change in logo and txtholder cards that have information

--- a/Project1.html
+++ b/Project1.html
@@ -10,7 +10,7 @@
 
         <div class="slide topimg"
               style="background-image:url(fly/mountainrange.jpg)">
-          <img class="logoimg" src="fly/LOGO.jpg"/>
+          <img class="logoimg" src="fly/Logo-01.png"/>
 
           <div class="topimg-txt">
             <h1 class="chickflypants">Chickfly Pants</h1>
